# bitreader-cpp

./: .gitignore  CMakeLists.txt  build.gradle.kts  local.properties  settings.gradle.kts
bitreader/: CMakeLists.txt
bitreader/include/bitreader/codings/: exp-golomb-k0.hpp  string-nullterm.hpp
bitreader/include/bitreader/common/: direct_file_reader.hpp  file_reader.hpp
bitreader/include/bitreader/data_source/: file_byte_source.hpp  memory_byte_source.hpp
bitreader/src/common/: direct_file_reader.cpp
bitreader/src/data_source/: file_byte_source.cpp  memory_byte_source.cpp
bitreader/test/: CMakeLists.txt  gtest_common.hpp
